fixed width issues on mobile on the back to top btn

--- a/portfolio/src/styles/contact.sass
+++ b/portfolio/src/styles/contact.sass
@@ -45,7 +45,7 @@
     .btn
         width: 100%
         .btn-top 
-            width: 10%
+            width: 20%
             height: 5vh
             display: flex
             border-radius: 5px
@@ -58,7 +58,7 @@
             cursor: pointer
             @media #{$tablet}
                 font-size: 0.8rem
-                width: 30%
+                width: 50%
     @media #{$tablet}
         .form, .form-message
             width: 100%
